--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,5 +1,6 @@
 :root {
   --background: #ffffff;
+  --textColor: #ffffff;
 }
 
 html,
@@ -10,5 +11,7 @@ body {
 
 body {
   background: var(--background);
+  color: var(--textColor);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
